------------------------------------------------------------------------------------------------------------------------
JavaLoader Changelog:
------------------------------------------------------------------------------------------------------------------------

JavaLoader-0.0.1-SNAPSHOT build 1:
- Initial release.

JavaLoader-0.0.1-SNAPSHOT build 2:
- BugFix: Having a whitespace character in the jar file name would pass "%20" to the java compiler and cause the
  classpath entry to be invalid.
- Select the java classpath seperator based on the OS (';' on windows and ':' on other OSes), so that the plugin
  will also work on other OSes.